--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -884,104 +884,132 @@ body {
   z-index: 50;
 }
 
-.m-auto {
-  margin: auto;
+.ml-4 {
+  margin-left: 1rem;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
 }
 
 .flex {
   display: flex;
 }
 
+.inline-flex {
+  display: inline-flex;
+}
+
 .h-12 {
   height: 3rem;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-24 {
-  height: 6rem;
 }
 
 .h-16 {
   height: 4rem;
 }
 
-.h-6 {
-  height: 1.5rem;
+.h-2\.5 {
+  height: 0.625rem;
 }
 
 .h-4 {
   height: 1rem;
 }
 
-.h-2\.5 {
-  height: 0.625rem;
+.h-6 {
+  height: 1.5rem;
 }
 
 .h-full {
   height: 100%;
 }
 
-.w-12 {
-  width: 3rem;
+.h-screen {
+  height: 100vh;
 }
 
-.w-72 {
-  width: 18rem;
+.h-8 {
+  height: 2rem;
 }
 
-.w-\[200px\] {
-  width: 200px;
+.h-10 {
+  height: 2.5rem;
 }
 
-.w-auto {
-  width: auto;
-}
-
-.w-screen {
-  width: 100vw;
-}
-
-.w-\[180px\] {
-  width: 180px;
-}
-
-.w-24 {
-  width: 6rem;
-}
-
-.w-16 {
-  width: 4rem;
+.h-9 {
+  height: 2.25rem;
 }
 
 .w-1 {
   width: 0.25rem;
 }
 
-.w-4 {
-  width: 1rem;
+.w-12 {
+  width: 3rem;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .w-2\.5 {
   width: 0.625rem;
 }
 
-.w-full {
-  width: 100%;
+.w-4 {
+  width: 1rem;
 }
 
-.w-\[250px\] {
-  width: 250px;
+.w-72 {
+  width: 18rem;
 }
 
-.w-\[412px\] {
-  width: 412px;
+.w-\[180px\] {
+  width: 180px;
 }
 
 .w-\[312px\] {
   width: 312px;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-screen {
+  width: 100vw;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-3 {
+  width: 0.75rem;
+}
+
+.w-\[342px\] {
+  width: 342px;
+}
+
+.w-\[280px\] {
+  width: 280px;
+}
+
+.w-9 {
+  width: 2.25rem;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .flex-1 {
@@ -1002,16 +1030,16 @@ body {
           user-select: none;
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
 .flex-col {
   flex-direction: column;
 }
 
 .place-content-center {
   place-content: center;
-}
-
-.place-items-center {
-  place-items: center;
 }
 
 .items-center {
@@ -1042,28 +1070,67 @@ body {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-x-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
 
-.rounded-md {
-  border-radius: calc(var(--radius) - 2px);
+.whitespace-nowrap {
+  white-space: nowrap;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
+.rounded-\[inherit\] {
+  border-radius: inherit;
 }
 
 .rounded-full {
   border-radius: 9999px;
 }
 
+.rounded-md {
+  border-radius: calc(var(--radius) - 2px);
+}
+
 .rounded-sm {
   border-radius: calc(var(--radius) - 4px);
 }
 
-.rounded-\[inherit\] {
-  border-radius: inherit;
+.rounded-xl {
+  border-radius: 0.75rem;
+}
+
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
+.rounded-l-md {
+  border-top-left-radius: calc(var(--radius) - 2px);
+  border-bottom-left-radius: calc(var(--radius) - 2px);
+}
+
+.rounded-l-xl {
+  border-top-left-radius: 0.75rem;
+  border-bottom-left-radius: 0.75rem;
+}
+
+.rounded-l-2xl {
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+
+.rounded-l-full {
+  border-top-left-radius: 9999px;
+  border-bottom-left-radius: 9999px;
+}
+
+.rounded-l-none {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
 }
 
 .border {
@@ -1074,8 +1141,8 @@ body {
   border-width: 2px;
 }
 
-.border-4 {
-  border-width: 4px;
+.border-0 {
+  border-width: 0px;
 }
 
 .border-l {
@@ -1086,26 +1153,20 @@ body {
   border-top-width: 1px;
 }
 
-.border-border {
-  border-color: hsl(var(--border));
+.border-l-4 {
+  border-left-width: 4px;
 }
 
-.border-zinc-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(244 244 245 / var(--tw-border-opacity, 1));
-}
-
-.border-zinc-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(82 82 91 / var(--tw-border-opacity, 1));
-}
-
-.border-muted-foreground {
-  border-color: hsl(var(--muted-foreground));
+.border-l-8 {
+  border-left-width: 8px;
 }
 
 .border-muted {
   border-color: hsl(var(--muted));
+}
+
+.border-input {
+  border-color: hsl(var(--input));
 }
 
 .border-l-transparent {
@@ -1116,21 +1177,45 @@ body {
   border-top-color: transparent;
 }
 
-.bg-popover {
-  background-color: hsl(var(--popover));
+.border-l-rose-400 {
+  --tw-border-opacity: 1;
+  border-left-color: rgb(251 113 133 / var(--tw-border-opacity, 1));
 }
 
-.bg-rose-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 113 133 / var(--tw-bg-opacity, 1));
+.bg-border {
+  background-color: hsl(var(--border));
 }
 
 .bg-card {
   background-color: hsl(var(--card));
 }
 
-.bg-border {
-  background-color: hsl(var(--border));
+.bg-popover {
+  background-color: hsl(var(--popover));
+}
+
+.bg-primary {
+  background-color: hsl(var(--primary));
+}
+
+.bg-background {
+  background-color: hsl(var(--background));
+}
+
+.bg-destructive {
+  background-color: hsl(var(--destructive));
+}
+
+.bg-secondary {
+  background-color: hsl(var(--secondary));
+}
+
+.p-1 {
+  padding: 0.25rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
 }
 
 .p-3 {
@@ -1145,28 +1230,44 @@ body {
   padding: 1.5rem;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
-.p-1 {
-  padding: 0.25rem;
-}
-
 .p-\[1px\] {
   padding: 1px;
 }
 
-.pt-0 {
-  padding-top: 0px;
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .pr-8 {
   padding-right: 2rem;
 }
 
-.align-middle {
-  vertical-align: middle;
+.pt-0 {
+  padding-top: 0px;
+}
+
+.pl-0 {
+  padding-left: 0px;
+}
+
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .font-mono {
@@ -1188,12 +1289,12 @@ body {
   line-height: 1rem;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-medium {
   font-weight: 500;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .leading-none {
@@ -1204,6 +1305,10 @@ body {
   letter-spacing: -0.025em;
 }
 
+.text-card-foreground {
+  color: hsl(var(--card-foreground));
+}
+
 .text-muted-foreground {
   color: hsl(var(--muted-foreground));
 }
@@ -1212,14 +1317,24 @@ body {
   color: hsl(var(--popover-foreground));
 }
 
-.text-card-foreground {
-  color: hsl(var(--card-foreground));
+.text-destructive-foreground {
+  color: hsl(var(--destructive-foreground));
 }
 
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.text-primary {
+  color: hsl(var(--primary));
+}
+
+.text-primary-foreground {
+  color: hsl(var(--primary-foreground));
+}
+
+.text-secondary-foreground {
+  color: hsl(var(--secondary-foreground));
+}
+
+.underline-offset-4 {
+  text-underline-offset: 4px;
 }
 
 .shadow {
@@ -1228,9 +1343,25 @@ body {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-sm {
+  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.outline {
+  outline-style: solid;
 }
 
 .transition-colors {
@@ -1253,12 +1384,55 @@ body {
   }
 }
 
+.hover\:bg-accent:hover {
+  background-color: hsl(var(--accent));
+}
+
 .hover\:bg-accent\/50:hover {
   background-color: hsl(var(--accent) / 0.5);
 }
 
-.hover\:bg-accent:hover {
-  background-color: hsl(var(--accent));
+.hover\:bg-destructive\/90:hover {
+  background-color: hsl(var(--destructive) / 0.9);
+}
+
+.hover\:bg-primary\/90:hover {
+  background-color: hsl(var(--primary) / 0.9);
+}
+
+.hover\:bg-secondary\/80:hover {
+  background-color: hsl(var(--secondary) / 0.8);
+}
+
+.hover\:text-accent-foreground:hover {
+  color: hsl(var(--accent-foreground));
+}
+
+.hover\:underline:hover {
+  text-decoration-line: underline;
+}
+
+.focus-visible\:outline-none:focus-visible {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus-visible\:ring-1:focus-visible {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.focus-visible\:ring-ring:focus-visible {
+  --tw-ring-color: hsl(var(--ring));
+}
+
+.disabled\:pointer-events-none:disabled {
+  pointer-events: none;
+}
+
+.disabled\:opacity-50:disabled {
+  opacity: 0.5;
 }
 
 .data-\[state\=open\]\:animate-in[data-state="open"] {
@@ -1313,41 +1487,43 @@ body {
   --tw-enter-translate-y: 0.5rem;
 }
 
-@media (min-width: 435px) {
-  .sm\:w-\[220px\] {
-    width: 220px;
+@media (min-width: 390px) {
+  .xs\:w-\[320px\] {
+    width: 320px;
   }
+}
 
+@media (min-width: 435px) {
   .sm\:w-\[200px\] {
     width: 200px;
+  }
+
+  .sm\:w-\[342px\] {
+    width: 342px;
   }
 }
 
 @media (min-width: 768px) {
-  .md\:w-\[240px\] {
-    width: 240px;
-  }
-
   .md\:w-\[220px\] {
     width: 220px;
+  }
+
+  .md\:w-\[380px\] {
+    width: 380px;
   }
 }
 
 @media (min-width: 1024px) {
-  .lg\:w-\[260px\] {
-    width: 260px;
-  }
-
   .lg\:w-\[240px\] {
     width: 240px;
+  }
+
+  .lg\:w-\[342px\] {
+    width: 342px;
   }
 }
 
 @media (min-width: 1280px) {
-  .xl\:w-\[280px\] {
-    width: 280px;
-  }
-
   .xl\:w-\[260px\] {
     width: 260px;
   }
@@ -1355,4 +1531,17 @@ body {
 
 .\[\&\>div\]\:\!rounded-none>div {
   border-radius: 0px !important;
+}
+
+.\[\&_svg\]\:pointer-events-none svg {
+  pointer-events: none;
+}
+
+.\[\&_svg\]\:size-4 svg {
+  width: 1rem;
+  height: 1rem;
+}
+
+.\[\&_svg\]\:shrink-0 svg {
+  flex-shrink: 0;
 }
