--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -926,6 +926,10 @@ body {
   border-width: 0;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .static {
   position: static;
 }
@@ -1542,6 +1546,10 @@ body {
 
 .opacity-70 {
   opacity: 0.7;
+}
+
+.opacity-40 {
+  opacity: 0.4;
 }
 
 .shadow {
