Added visibility state for the canvasContainer component

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -766,10 +766,6 @@ select {
   grid-column: content;
 }
 
-.popout {
-  grid-column: popout;
-}
-
 .full {
   grid-column: full;
 }
@@ -952,10 +948,6 @@ body {
   top: 50%;
 }
 
-.bottom-8 {
-  bottom: 2rem;
-}
-
 .z-50 {
   z-index: 50;
 }
@@ -963,10 +955,6 @@ body {
 .-mx-1 {
   margin-left: -0.25rem;
   margin-right: -0.25rem;
-}
-
-.ml-2 {
-  margin-left: 0.5rem;
 }
 
 .ml-6 {
@@ -983,10 +971,6 @@ body {
 
 .mt-2 {
   margin-top: 0.5rem;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
 }
 
 .flex {
@@ -1045,10 +1029,6 @@ body {
   height: 1px;
 }
 
-.h-\[472px\] {
-  height: 472px;
-}
-
 .h-full {
   height: 100%;
 }
@@ -1061,16 +1041,12 @@ body {
   height: 100vh;
 }
 
-.h-6 {
-  height: 1.5rem;
+.h-\[472px\] {
+  height: 472px;
 }
 
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-14 {
-  height: 3.5rem;
+.h-\[876px\] {
+  height: 876px;
 }
 
 .max-h-\[300px\] {
@@ -1145,20 +1121,20 @@ body {
   width: 100vw;
 }
 
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-14 {
-  width: 3.5rem;
-}
-
 .w-\[876px\] {
   width: 876px;
+}
+
+.w-\[1200px\] {
+  width: 1200px;
+}
+
+.w-\[972px\] {
+  width: 972px;
+}
+
+.w-\[912px\] {
+  width: 912px;
 }
 
 .min-w-10 {
@@ -1236,10 +1212,6 @@ body {
 
 .grid-cols-\[324px_1fr\] {
   grid-template-columns: 324px 1fr;
-}
-
-.grid-cols-\[424px_1fr\] {
-  grid-template-columns: 424px 1fr;
 }
 
 .flex-row {
@@ -1471,14 +1443,14 @@ body {
   background-color: transparent;
 }
 
-.bg-zinc-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
-}
-
 .bg-zinc-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
+}
+
+.bg-zinc-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
 .p-0 {
@@ -1839,6 +1811,10 @@ body {
   --tw-enter-translate-y: -0.5rem;
 }
 
+.slide-in-from-bottom-0 {
+  --tw-enter-translate-y: 0px;
+}
+
 .duration-200 {
   animation-duration: 200ms;
 }
@@ -1908,14 +1884,14 @@ body {
   background-color: transparent;
 }
 
-.hover\:bg-zinc-900:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:bg-zinc-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(39 39 42 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-zinc-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity, 1));
 }
 
 .hover\:text-accent-foreground:hover {
